# geotiff-to-wavetable-converter

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  renovate.json  requirements.txt
.claude/: settings.json
examples/: USGS_OPR_AZ_2021LowerColoradoTB_C23_LCR_000002.tif  lower-colorado.wt
src/: main.py  pyproject.toml
src/geotiff_to_wavetable/: __init__.py  cli.py  converter.py  io_utils.py  loaders.py  validators.py
src/tests/: test_calculate_height.py  test_calculate_width.py  test_shift_bit_length.py  test_validate_wave_size.py
tests/: test_cli.py  test_converter.py  test_validators.py
