[project]
name = "geotiff-to-wavetable"
version = "0.1.0"
description = "Utility to convert GeoTIFF to WAV"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "rasterio>=1.4.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pre_commit>=4.5.1",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
